--- a/Act01 -  Busqueda con GUI/README
+++ b/Act01 -  Busqueda con GUI/README
@@ -1,2 +1,10 @@
+Estructura de la carpeta
+
 ├── main.py   # Código principal con la interfaz y los algoritmos
 └── README.md # Este archivo
+
+Comparación de Búsqueda Lineal y Binaria
+
+Este proyecto es una aplicación en Python con Tkinter que permite comparar el rendimiento de los algoritmos de búsqueda lineal y búsqueda binaria
+sobre listas de números enteros generados aleatoriamente. La aplicación muestra el tiempo de ejecución de cada algoritmo y permite visualizar los
+resultados en una gráfica
