--- a/Act01 -  Busqueda con GUI/README
+++ b/Act01 -  Busqueda con GUI/README
@@ -2,6 +2,7 @@ Estructura de la carpeta
 
 ├── main.py   # Código principal con la interfaz y los algoritmos
 └── README.md # Este archivo
+└── requirements.txt #Las librerias instaladas
 
 Comparación de Búsqueda Lineal y Binaria
 
